Đã sửa một nửa giao diện, còn một số lỗi